login module Beta 1.1 (change DB and models attributes)

--- a/bikeshare/templates/login_beta.html
+++ b/bikeshare/templates/login_beta.html
@@ -7,7 +7,7 @@
 <body>
     <form action="/login/" method="post">
         {% csrf_token %}
-        <input type="text" name="username" placeholder="Your Username">
+        <input type="text" name="userid" placeholder="Your Username">
         <input type="text" name="password" placeholder="Your password">
         <input type="submit" value="Login">
     </form>
