--- a/bikeshare/templates/user_page.html
+++ b/bikeshare/templates/user_page.html
@@ -5,7 +5,8 @@
     <title>User Page</title>
 </head>
 <body>
-    <p>Hello,user:{{ userid }}</p>
+    <p>Hello, {{ userid }} ({{ nickname }})</p>
     <p>You are a {{ role }}</p>
+    <button onclick="window.location.href='/logout'">logout</button>
 </body>
 </html>
