--- a/bikeshare/templates/bikeshareapp/login.html
+++ b/bikeshare/templates/bikeshareapp/login.html
@@ -7,14 +7,8 @@
       href="https://cdn.bootcdn.net/ajax/libs/skeleton/2.0.4/skeleton.css"
       rel="stylesheet"
     />
-  
+
     <style>
-      .error {
-        color: white;
-        padding: 5px;
-        margin: 5px, 15px, 15px, 0;
-        background-color: red;
-      }
       .text-center {
         text-align: center;
       }
@@ -34,12 +28,14 @@
           <label for="pwd">PassWord</label>
           <input type="password" id="pwd" class="u-full-width" />
         </div>
-        
+
         <div>
           <input type="submit" value="Log In" class="u-full-width" />
         </div>
+        <p class="text-center"> Don't have an account? please <a href="register_user.html">click here</a>  to register.</p>
       </form>
 
     <script src="app.js"></script>
   </body>
 </html>
+
