--- a/bikeshare/templates/bikeshareapp/login.html
+++ b/bikeshare/templates/bikeshareapp/login.html
@@ -35,7 +35,8 @@
         <p class="text-center"> Don't have an account? please <a href="register_user.html">click here</a>  to register.</p>
       </form>
 
-    <script src="app.js"></script>
+    {% load static %}
+    <script src="{% static "javascript/app.js" %}"></script>
   </body>
 </html>
 
