--- a/bikeshare/templates/bikeshareapp/register_other.html
+++ b/bikeshare/templates/bikeshareapp/register_other.html
@@ -37,6 +37,7 @@
         </div>
       </form>
 
-    <script src="app.js"></script>
+    {% load static %}
+    <script src="{% static "javascript/app.js" %}"></script>
   </body>
 </html>
