--- a/bikeshare/templates/bikeshareapp/index.html
+++ b/bikeshare/templates/bikeshareapp/index.html
@@ -41,7 +41,7 @@
         </div>
       </form>
 
-      <p class="text-center"> Already have an account? please <a href="login.html">click here</a>  to log in!</p>
+      <p class="text-center"> Already have an account? please <a href="/login/">click here</a>  to log in!</p>
       {% load static %}
       <script src="{% static "javascript/app.js" %}"></script>
 
