--- a/bikeshare/templates/bikeshareapp/login.html
+++ b/bikeshare/templates/bikeshareapp/login.html
@@ -35,7 +35,7 @@
         <div>
           <input type="submit" value="Login" class="u-full-width" />
         </div>
-        <p class="text-center"> Don't have an account? please <a href="register_user.html">click here</a>  to register.</p>
+        <p class="text-center"> Don't have an account? please <a href="to_register/">click here</a>  to register.</p>
       </form>
 
       <p>{{ info }}</p>
