--- a/bikeshare/templates/bikeshareapp/index.html
+++ b/bikeshare/templates/bikeshareapp/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <h1>Let's Start</h1>
 
-      <form id="user-form" action="/register/" method="post">
+      <form id="user-form" action="/login/" method="post">
           {% csrf_token %}
         <div>
           <label for="username">User Name</label>
