--- a/bikeshare/templates/bikeshareapp/register_other.html
+++ b/bikeshare/templates/bikeshareapp/register_other.html
@@ -15,7 +15,7 @@
     <div class="container">
       <h1>Register</h1>
 
-      <form id="user-form">
+      <form id="user-form" action="/mainpage/">
         <div>
           <label for="username">User Name</label>
           <input type="text" id="username" class="u-full-width" />
