--- a/bikeshare/templates/bikeshareapp/user_page.html
+++ b/bikeshare/templates/bikeshareapp/user_page.html
@@ -24,13 +24,10 @@
     />
 
      <style type="text/css">
-      /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
       #map {
-        height: 100%;
+        height: 57%;
       }
 
-      /* Optional: Makes the sample page fill the window. */
       html,
       body {
         height: 100%;
@@ -55,9 +52,9 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top">
       <div class="container">
-        <a href="mainpage.html" class="navbar-brand">
+        <a href="user_page.html" class="navbar-brand">
           <i class="fas fa-biking"></i>
-          <span class="text-primary">Bike</span>
+          <span class="text-primary font-weight-bold">Bike</span>
           Sharing</a
         >
         <button
@@ -73,18 +70,68 @@
               <a href="#home" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Start</a>
-            </li>
-            <li class="nav-item">
-              <a href="logout.html" class="nav-link">Log out</a>
+              <a href="login.html" class="nav-link">Log out</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-
     <div id="map"></div>
+
+    <section id="main-page">
+      <div class="container">
+        <div class="start-form bg-light p-3">
+          <h2 class="m-heading">Let's start</h2>
+          <form action="#">
+            <div class="form-group">
+              <label for="postcode">Post Code: </label>
+              <input
+                class="form-control"
+                placeholder="Enter postcode"
+                type="text"
+                id="postcode"
+                class="box"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <button
+                class="submitbox btn btn-primary"
+                onclick="postCodeSubmit()"
+              >
+                Submit
+              </button>
+            </div>
+            <div class="form-group">
+              <label for="bikeID">Bike ID: </label>
+              <input
+                class="form-control"
+                placeholder="Enter bike ID"
+                type="text"
+                id="bikeID"
+                class="box"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <button
+                class="startbox btn btn-primary"
+                onclick="bikeIDStartSubmit()"
+              >
+                Start
+              </button>
+              <button
+                class="reportbox btn btn-dark"
+                onclick="bikeIDErrorSubmit()"
+              >
+                Report errors
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
 
     <script
       src="http://code.jquery.com/jquery-3.5.1.min.js"
