added frontend call for all-bikes endpoint

--- a/bikeshare/templates/bikeshareapp/login.html
+++ b/bikeshare/templates/bikeshareapp/login.html
@@ -19,7 +19,7 @@
     <div class="container">
       <h1>Log In</h1>
 
-      <form id="user-form" action="/mainpage/" method="post">
+      <form id="user-form" action="/login/" method="post">
         <div>
           {% csrf_token %}
         </div>
