--- a/bikeshare/templates/bikeshareapp/user_page.html
+++ b/bikeshare/templates/bikeshareapp/user_page.html
@@ -70,7 +70,7 @@
               <a href="#home" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="login.html" class="nav-link">Log out</a>
+              <a href="/logout" class="nav-link">Log out</a>
             </li>
           </ul>
         </div>
