get-all-bikes endpoint using the cookies based on Peihai suggestion

--- a/bikeshare/templates/bikeshareapp/user_page.html
+++ b/bikeshare/templates/bikeshareapp/user_page.html
@@ -157,27 +157,26 @@
     <script>
       // This should be in another file but for now, I will keep here. Once I make it work I will move it
 
-      function getAllBikes(type) {
+      function getAllBikes() {
         var xhttp = new XMLHttpRequest();
         xhttp.onreadystatechange = function() {
           if(this.readyState == 4 && this.status == 200) {
             // Get the response from REST request
             console.log("Done")
-            console.log(this)
             response = JSON.parse(this.response)
             console.log(response)
           }
         };
 
         // TODO: Look for a way to check the user type
-        xhttp.open("GET", "http://127.0.0.1:8000/all-bikes/"+type, true);
+        xhttp.open("GET", "http://127.0.0.1:8000/all-bikes/", true);
         xhttp.setRequestHeader("Content-type", "application/json");
         xhttp.send("Your JSON Data Here");
 
       }
 
       console.log("Loading....")
-      setTimeout(getAllBikes(3), 3000);
+      setTimeout(getAllBikes(), 3000);
       
 
     </script>
