--- a/bikeshare/templates/bikeshareapp/login.html
+++ b/bikeshare/templates/bikeshareapp/login.html
@@ -40,7 +40,15 @@
 
       <p>{{ info }}</p>
 
+
+    <script
+      src="http://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+
     {% load static %}
+
     <script src="{% static "javascript/app.js" %}"></script>
   </body>
 </html>
