--- a/bikeshare/templates/bikeshareapp/user_page.html
+++ b/bikeshare/templates/bikeshareapp/user_page.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-{% load static %}
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -16,8 +15,8 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
       media="screen and (max-width: 768px)"
@@ -120,12 +119,6 @@
                 class="startbox btn btn-primary"
                 onclick="bikeIDStartSubmit()"
               >
-                submit
-              </button>
-              <button
-                class="startbox btn btn-primary"
-                onclick="StartCount()"
-              >
                 Start
               </button>
               <button
@@ -134,32 +127,11 @@
               >
                 Report errors
               </button>
-              <div id="time">
-			   <p>00:00:00</p>
-			  </div>
-			 <button
-                class="reportbox btn btn-dark"
-                onclick="StopCount()"
-              >
-                Stop
-              </button>
             </div>
           </form>
         </div>
       </div>
     </section>
-    
-	<style type="text/css">
-	#time p{
-	    color: #000000;
-		font-size: 45px; 
-		font-weight: bold;
-		margin-left:350px;
-		margin-bottom:0px;
-		overflow: hidden;
-		}
-		
-	</style>
 
     <script
       src="http://code.jquery.com/jquery-3.5.1.min.js"
@@ -182,7 +154,32 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhwTKf3kSrByV-QeOT5hWAXN7CtM2VHFE&callback=initMap"
     ></script>
 
-   <script src="{% static "javascript/app.js" %}"></script>
+    <script>
+      // This should be in another file but for now, I will keep here. Once I make it work I will move it
+
+      function getAllBikes() {
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function() {
+          if(this.readyState == 4 && this.status == 200) {
+            // Get the response from REST request
+            console.log("Done")
+            response = JSON.parse(this.response)
+            console.log(response)
+          }
+        };
+
+        // TODO: Look for a way to check the user type
+        xhttp.open("GET", "http://127.0.0.1:8000/all-bikes/", true);
+        xhttp.setRequestHeader("Content-type", "application/json");
+        xhttp.send("Your JSON Data Here");
+
+      }
+
+      console.log("Loading....")
+      setTimeout(getAllBikes(), 3000);
+
+
+    </script>
 
   </body>
 </html>
