connect with report errors

--- a/bikeshare/templates/bikeshareapp/user_page.html
+++ b/bikeshare/templates/bikeshareapp/user_page.html
@@ -115,7 +115,7 @@
                 class="form-control"
                 placeholder="Enter bike ID"
                 type="text"
-                id="bikeID"
+                id="bikeid"
                 class="box"
                 required
               />
