--- a/bikeshare/templates/bikeshareapp/user_page.html
+++ b/bikeshare/templates/bikeshareapp/user_page.html
@@ -123,7 +123,7 @@
             <div class="form-group">
               <button
                 class="startbox btn btn-primary"
-                onclick="bikeIDStartSubmit()"
+                onclick="StartCount()"
               >
                 Start
               </button>
@@ -133,11 +133,32 @@
               >
                 Report errors
               </button>
+              
+              <div id="time">
+				<p>00:00:00</p>
+			  </div>
+
+			  <button
+                class="reportbox btn btn-dark"
+                onclick="StopCount()"
+              >
+                Stop
+              </button>
             </div>
           </form>
         </div>
       </div>
     </section>
+    <style type="text/css">
+		#time p{
+			color: #000000;
+			font-size: 45px;
+			font-weight: bold;
+			margin-left:350px;
+			margin-bottom:0px;
+			overflow: hidden;
+		}
+	</style>
 
     <script
       src="http://code.jquery.com/jquery-3.5.1.min.js"
@@ -161,26 +182,6 @@
     ></script>
 
     <script src="{% static "javascript/app.js" %}"></script>
-
-{#<script>#}
-{#     function getAllBikes() {#}
-{#       var xhttp = new XMLHttpRequest();#}
-{#        xhttp.onreadystatechange = function() {#}
-{#         if(this.readyState == 4 && this.status == 200) {#}
-{#           // Get the response from REST request#}
-{#           console.log("Done")#}
-{#           response = JSON.parse(this.response)#}
-{#            console.log(response)#}
-{#          }#}
-{#       }#}
-{#       xhttp.open("GET", "http://127.0.0.1:8000/all-bikes/", true);#}
-{#       xhttp.setRequestHeader("Content-type", "application/json");#}
-{#       xhttp.send("Your JSON Data Here");#}
-{##}
-{#     }#}
-{#     console.log("Loading....")#}
-{#     setTimeout(getAllBikes(), 3000);#}
-{#</script>#}
 
   </body>
 </html>
