--- a/bikeshare/templates/bikeshareapp/user_page.html
+++ b/bikeshare/templates/bikeshareapp/user_page.html
@@ -36,15 +36,38 @@
         padding: 0;
       }
     </style>
-    <script>
-      let map;
 
-      function initMap() {
+    <script>
+    let map;
+    function initMap() {
         map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat: 55.864239, lng: -4.251806},
-          zoom: 8,
+            center: { lat: 55.864239, lng: -4.251806 },
+            zoom: 8,
+            mapTypeId: "terrain",
         });
-      }
+         // Create a <script> tag and set the USGS URL as the source.
+        const script = document.createElement("script");
+        script.src =
+        "https://developers.google.com/maps/documentation/javascript/examples/json/earthquake_GeoJSONP.js";
+        document.getElementsByTagName("head")[0].appendChild(script);
+    }
+
+    function showMap (results) {
+      $.ajax({
+        type: "GET",
+        dataType: "json",
+        url: "/locations-of-availabe-bikes/",
+        data: {},
+        success: function (response) {
+          const latLng = new google.maps.LatLng(55.858791649199794, -4.24896240234375);
+          new google.maps.Marker({
+            position: latLng,
+            map: map,
+            title: "Bikeid: 1",
+          })
+        },
+      });
+     }
     </script>
 
     <title>Bike Sharing</title>
@@ -102,6 +125,12 @@
                 onclick="getBikes()"
               >
                 Search
+              </button>
+              <button
+                class="submitbox btn btn-primary"
+                onclick="showMap()"
+              >
+                Show on map
               </button>
               <div id="selectBike" class="form-group">
 
