--- a/bikeshare/templates/bikeshareapp/user_page.html
+++ b/bikeshare/templates/bikeshareapp/user_page.html
@@ -156,12 +156,38 @@
               >
                 Start
               </button>
+              <!--- Report Button -->
               <button
-                class="reportbox btn btn-dark"
-                onclick="bikeIDErrorSubmit()"
+                class="btn btn-danger"
+                onclick="CallModal()"
               >
-                Report errors
+                Report A Problem!
               </button>
+              <!--- Report Window --->
+              <div class="modal fade bd-report-modal-sm" tabindex="-1" role="dialog" 
+              id="ReportModal">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Report A Problem!</h5>
+                        </div>
+                        <div class="modal-body">                            
+                            <p>Would you like to report a problem with this bike? </p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary btn-block"       
+                            id="ConfirmReport" 
+                            onclick="bikeIDErrorSubmit()">
+                            Confirm
+                            </button>
+                            <button type="button" class="btn btn-secondary btn-block" 
+                            data-dismiss="modal">
+                            Close
+                            </button>
+                        </div>
+                    </div>
+                </div>
+              </div>
               
               <div id="time">
 				<p>00:00:00</p>
