Add 'rent bike' function(without 'return bike' and 'pay money')

--- a/bikeshare/templates/bikeshareapp/user_page.html
+++ b/bikeshare/templates/bikeshareapp/user_page.html
@@ -152,7 +152,8 @@
             <div class="form-group">
               <button
                 class="startbox btn btn-primary"
-                onclick="StartCount()"
+                type="button"
+                onclick="bikeIDStartSubmit()"
               >
                 Start
               </button>
