--- a/bikeshare/templates/bikeshareapp/rent_bike.html
+++ b/bikeshare/templates/bikeshareapp/rent_bike.html
@@ -1,43 +1,131 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <div id="div1">
-        <div id="count">
-            <span id="id_H">00</span><span>:</span>
-            <span id="id_M">00</span><span>:</span>
-            <span id="id_S">00</span>
-        </div>
-        <input id="pause" type="button" value="RETURN BIKE">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <title>Rent A Bike</title>
+    <style>
+        html, body {
+            height: 100%;
+            padding: 0;
+            margin: 0;
+        }
 
-    </div>
-</body>
-<style>
-        #div1{
-            width: 300px;
-            height: 400px;
-            background: blanchedalmond;
-            margin: 70px auto;
-            text-align: center;
+        span {
+            font-weight:bold;
         }
-        #count{
-            width: 200px;
-            height: 100px;
-            line-height: 100px;
-            margin: auto;   /*让计数的这个块居中*/
+        .card {
+            padding-top: 80px;
+            height: 80%;
         }
-        #div1 input{
-            width: 200px;
-            height: 40px;
-            background-color: yellow;
-            font-size: 25px;
-            margin: auto;
+        .card-body {
+            padding-top: 70px;
+        }
+        .card-bodyquote {
+            padding-top: 70px;
         }
 </style>
-<script>
+
+</head>
+<body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top">
+      <div class="container">
+        <a href="user_page.html" class="navbar-brand">
+          <i class="fas fa-biking"></i>
+          <span class="text-primary font-weight-bold">Bike</span>
+          Sharing</a
+        >
+        <button
+          class="navbar-toggler"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a href="#home" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="/logout" class="nav-link">Log out</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="card text-center">
+      <div class="card-body">
+        <div class="card bg-dark text-white p-3">
+          <blockquote class="card-bodyquote">
+            <span class="display-4" id="id_H">00</span
+            ><span class="display-4">:</span>
+            <span class="display-4" id="id_M">00</span
+            ><span class="display-4">:</span>
+            <span class="display-4" id="id_S">00</span>
+            <footer class="blockquote-footer">
+              <small>
+                <cite>Enjoy your trip and explore your city</cite>
+              </small>
+            </footer>
+          </blockquote>
+        </div>
+        <br />
+        <br />
+        <input
+          class="btn btn-dark"
+          id="pause"
+          type="button"
+          value="Return Bike"
+        />
+      </div>
+      <div class="card-footer text-muted">
+        Enjoy your trip and explore your city
+      </div>
+    </div>
+
+
+
+    <script
+      src="http://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+      integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhwTKf3kSrByV-QeOT5hWAXN7CtM2VHFE&callback=initMap"
+    ></script>
+
+    <script src="{% static "javascript/app.js" %}"></script>
+
+    <script>
         // 可以将查找标签节点的操作进行简化
         function $(id){
             return document.getElementById(id);
@@ -68,4 +156,5 @@
                 }
             }
     </script>
+</body>
 </html>
