--- a/bikeshare/static/css/style.css
+++ b/bikeshare/static/css/style.css
@@ -34,4 +34,19 @@
 }
 
 
+button.grid-style {
+  display: block ;
+  width: 100%;
+  height: 100%;
+}
 
+img.grid-style {
+  object-fit: cover;
+  width: 50%;
+  height: 50%;
+}
+
+div.col.grid-img-style {
+  text-align: center;
+  height: fit-content;
+}
