Fixed bug on refresh during renting a bike

--- a/bikeshare/templates/bikeshareapp/rent_bike.html
+++ b/bikeshare/templates/bikeshareapp/rent_bike.html
@@ -157,7 +157,8 @@
             return document.getElementById(id);
         }
         window.onload = function(){
-            var count = 0; // total seconds
+            var current = "{{current_time}}";
+            var count = current; // total seconds
             var timer = null;
             clearInterval(timer);
                 timer = setInterval(function(){
