--- a/bikeshare/templates/bikeshareapp/rent_bike.html
+++ b/bikeshare/templates/bikeshareapp/rent_bike.html
@@ -45,7 +45,77 @@
         .modal-header {
             padding: 10px;
         }
-</style>
+    </style>
+
+    <script
+      src="http://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      var timer = null
+      var bike = null
+      $(function() {
+        var current = "{{current_time}}";
+        bike = "{{current_bike}}"
+        var count = current; 
+        timer = null;
+        clearInterval(timer);
+        timer = setInterval(function(){
+            count++;
+            // change time in the page
+            $("#id_S").text(showNum(count % 60));
+            $("#id_M").text(showNum(parseInt(count / 60) % 60));
+            $("#id_H").text(showNum(parseInt(count / 3600 )));
+        },1000);
+      });
+
+      function returnBike(){
+          
+          // call the endpoint to return the bike
+          var currentLocation = $("#postcode-return").val()
+          currentLocation = currentLocation.replace(' ','')
+          var xcsrft = "bV2JXP0TnIbUX5Mmq0iF4lUfC34ctY5uZwOKGnaeLwFV8I8lP7OPYLBrLTFcHLKT"; // should get this from cookes
+          if(currentLocation.length == 0){
+            // TODO: Change to boostrap alert
+            alert("Write the postcode please");
+          }
+          else {
+            // quit timer
+            clearInterval(timer);
+            console.log(currentLocation)
+            $.ajax({
+              type: "POST",
+              dataType: "json",
+              url: "/return_bike/",
+              data: {
+                bike_id: bike,
+                location: currentLocation
+              },
+              beforeSend: function (request) {
+                request.setRequestHeader("X-CSRFToken", xcsrft);
+              },
+              success: function(response){
+                console.log(response)
+                $('#payment').modal('show');
+              }
+            });
+          }
+      }
+
+     
+
+
+      // single number
+      function showNum(num){
+          if(num<10){
+              return "0" + num;
+          }else{
+              return num;
+          }
+      }
+      
+    </script>
 
 </head>
 <body>
@@ -94,45 +164,57 @@
         </div>
         <br />
         <br />
-        <input
-          class="btn btn-dark "
-          data-toggle="modal"
-          data-target="#payment"
-          id="pause"
-          type="button"
-          value="Return Bike"
-        />
+        <!-- TODO: IMPROVE STYLE PLEASE-->
+        <div style="display: inline-grid;"  >
+          <div class="form-group">
+            <label for="postcode">Where are you leaving the bike? </label>
+            <input
+              class="form-control"
+              placeholder="Enter postcode"
+              type="text"
+              id="postcode-return"
+              class="box"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <input
+              class="btn btn-dark "
+              id="pause"
+              type="button"
+              value="Return Bike"
+              onclick="returnBike()"
+            />
+          </div>
+        </div>
       </div>
+
       <div class="card-footer text-muted">
         Enjoy your trip and explore your city
       </div>
     </div>
 
     <div class="modal fade" id="payment">
-    <div class="modal-lg modal-dialog ">
-      <div class="modal-content">
-        <div class="text-black-50 new-color modal-header">
-          <h5 class="modal-title">Make a payment</h5>
-          <button class="close" data-dismiss="modal">
-            <span>&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <p class="h4 text-center">Your total cost is: </p>
-        </div>
-        <div class="modal-footer">
-          <button class="btn btn-dark" data-dismiss="modal">Check out</button>
+      <div class="modal-lg modal-dialog ">
+        <div class="modal-content">
+          <div class="text-black-50 new-color modal-header">
+            <h5 class="modal-title">Make a payment</h5>
+            <button class="close" data-dismiss="modal">
+              <span>&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p class="h4 text-center">Your total cost is: </p>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-dark" data-dismiss="modal">Check out</button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
+    
 
-    <script
-      src="http://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
       integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
@@ -151,37 +233,5 @@
 
     <script src="{% static "javascript/app.js" %}"></script>
 
-    <script>
-        // simplify searching tags
-        function $(id){
-            return document.getElementById(id);
-        }
-        window.onload = function(){
-            var current = "{{current_time}}";
-            var count = current; // total seconds
-            var timer = null;
-            clearInterval(timer);
-                timer = setInterval(function(){
-                    count++;
-                    // change time in the page
-                    $("id_S").innerHTML = showNum(count % 60);
-                    $("id_M").innerHTML = showNum(parseInt(count / 60) % 60);
-                    $("id_H").innerHTML = showNum(parseInt(count / 3600 ));
-                },1000);
-
-            $("pause").onclick = function(){
-                // quit timer
-                clearInterval(timer);
-            }
-        }
-            // single number
-            function showNum(num){
-                if(num<10){
-                    return "0" + num;
-                }else{
-                    return num;
-                }
-            }
-    </script>
 </body>
 </html>
